// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`social-media/upload-from-url/instagram single reel Publish the Post video gets published 1`] = `
Ok {
  "value": Object {
    "postId": "18314393020023853",
    "url": "https://www.instagram.com/reel/CiNYFgTK3CI/",
  },
}
`;

exports[`social-media/upload-from-url/instagram single reel RegisterUpload should return an id 1`] = `
Ok {
  "value": Object {
    "assetId": "17928162404359628",
  },
}
`;

exports[`social-media/upload-from-url/instagram single video Publish the Post video gets published 1`] = `
Ok {
  "value": Object {
    "postId": "17921650568575301",
    "url": "https://www.instagram.com/p/CiNYCGHK1N4/",
  },
}
`;

exports[`social-media/upload-from-url/instagram single video RegisterUpload should return an id 1`] = `
Ok {
  "value": Object {
    "assetId": "17952174199986251",
  },
}
`;
